Fixed cannot find the symbol in LinkSharePresenter.java